// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form component reder functions Should return final form checkbox 1`] = `
<FormGroup
  bsClass="form-group"
  className="field-group"
  validationState={null}
>
  <Col
    bsClass="col"
    componentClass="div"
  >
    <Checkbox
      bsClass="checkbox"
      disabled={false}
      id="name"
      inline={false}
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      title=""
      value=""
    >
      check box
    </Checkbox>
  </Col>
</FormGroup>
`;

exports[`Final form component reder functions Should return final form number input 1`] = `
<FormGroup
  bsClass="form-group"
  validationState={null}
>
  <Col
    bsClass="col"
    className="control-label"
    componentClass="label"
    xs={2}
  >
    Number field
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={8}
  >
    <FormControl
      bsClass="form-control"
      componentClass="input"
      disabled={false}
      id="name"
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      type="number"
      value=""
    />
  </Col>
</FormGroup>
`;

exports[`Final form component reder functions Should return final form password input 1`] = `
<FormGroup
  bsClass="form-group"
  validationState={null}
>
  <Col
    bsClass="col"
    className="control-label"
    componentClass="label"
    xs={2}
  >
    Number field
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={8}
  >
    <FormControl
      bsClass="form-control"
      componentClass="input"
      disabled={false}
      id="name"
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      type="password"
      value=""
    />
  </Col>
</FormGroup>
`;

exports[`Final form component reder functions Should return final form text field 1`] = `
<FormGroup
  bsClass="form-group"
  validationState={null}
>
  <Col
    bsClass="col"
    className="control-label"
    componentClass="label"
    xs={2}
  >
    Text field
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={8}
  >
    <FormControl
      bsClass="form-control"
      componentClass="input"
      disabled={false}
      id="name"
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      type="text"
      value=""
    />
  </Col>
</FormGroup>
`;

exports[`Final form component reder functions Should return final form textarea 1`] = `
<FormGroup
  bsClass="form-group"
  validationState={null}
>
  <Col
    bsClass="col"
    className="control-label"
    componentClass="label"
    xs={2}
  >
    Text area
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={8}
  >
    <FormControl
      bsClass="form-control"
      componentClass="textarea"
      disabled={false}
      id="name"
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      value=""
    />
  </Col>
</FormGroup>
`;
